Stop header links jumping when page loads

--- a/docs/stylesheets/_topbar.css
+++ b/docs/stylesheets/_topbar.css
@@ -36,6 +36,18 @@
     margin-inline: 0.8rem;
 }
 
+header {
+    height: var(--header-height);
+}
+
+.md-header__inner {
+    height: 100%;
+}
+
+.md-header__logo {
+    width: 13.5rem;
+}
+
 .md-header__button {
     margin: 0;
     padding: 0;
@@ -67,7 +79,7 @@
     width: 100%;
     height: 0.3rem;
     position: sticky;
-    top: 4.15rem;
+    top: var(--header-height);
     z-index: 1;
 }
 
@@ -108,4 +120,8 @@
     .md-tabs {
         display: none;
     }
+}
+
+:root {
+    --header-height: 4rem;
 }
